--- a/flipped-style/06-random-and-mixed/061-intro-to-random-effects.qmd
+++ b/flipped-style/06-random-and-mixed/061-intro-to-random-effects.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Module 6: Random Effects & Mixed Models"
+title: "Module 6: Random Effects & Linear Mixed Models"
 subtitle: "Introduction to Random Effects"
 format: 
   revealjs:
