--- a/00-course-info/W2026/stat323-syllabus-W2026.qmd
+++ b/00-course-info/W2026/stat323-syllabus-W2026.qmd
@@ -44,13 +44,13 @@ question!
 
 **Office Hours** are held in my office (25-103) during the following times:
 
-::: column-margin
+<!-- ::: column-margin -->
 
-{{< video https://www.youtube.com/embed/yQq1-_ujXrM?si=sFpcpfT9Cey2-Eaf >}}
+<!-- {{< video https://www.youtube.com/embed/yQq1-_ujXrM?si=sFpcpfT9Cey2-Eaf >}} -->
 
-Introducing Faculty Office Hours
+<!-- Introducing Faculty Office Hours -->
 
-:::
+<!-- ::: -->
 
 | Day       | Time                   |
 |-----------|------------------------|
@@ -82,7 +82,7 @@ not_here_dates <- c(
 
 exam_dates <- c(ymd(20260203), 
                 ymd(20260224),
-                ymd(20260317)
+                ymd(20260316)
                 )
 
 finals_week <- seq(ymd(20260315), ymd(20260320), by = 1)
@@ -330,14 +330,14 @@ tribble(
 
 Lower bounds for grade cutoffs are shown in the following table. I will not "round up" grades at the end of the quarter. See this [thread](https://twitter.com/drseanmullen/status/1604212304622518272?s=46&t=II3oNLTSSrljVPqptoe21g) for advice on *"Playing the lines. Don't be there."*
 
-::: column-margin
+<!-- ::: column-margin -->
 
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
-</script>
+<!-- <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"> -->
+<!-- </script> -->
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">When my 11yo daughter complains her opponent in tennis is calling calls out..<br><br>I tell her:<br><br>“Don’t play the lines.”<br><br>As a college student, eventually every professor has to draw some lines.<br><br>Don’t play them so close. Don’t be there.</p>&mdash; Dr. Sean Mullen (@drseanmullen) <a href="https://twitter.com/drseanmullen/status/1604212307260645376?ref_src=twsrc%5Etfw">December 17, 2022</a></blockquote>
+<!-- <blockquote class="twitter-tweet"><p lang="en" dir="ltr">When my 11yo daughter complains her opponent in tennis is calling calls out..<br><br>I tell her:<br><br>“Don’t play the lines.”<br><br>As a college student, eventually every professor has to draw some lines.<br><br>Don’t play them so close. Don’t be there.</p>&mdash; Dr. Sean Mullen (@drseanmullen) <a href="https://twitter.com/drseanmullen/status/1604212307260645376?ref_src=twsrc%5Etfw">December 17, 2022</a></blockquote> -->
 
-:::
+<!-- ::: -->
 
 | Letter grade | X +  | X   | X - |
 |--------------|------|-----|-----|
